[gd_scene load_steps=2 format=2]

[ext_resource path="res://mobs/components/chase_movement.gd" type="Script" id=1]

[node name="ChaseMovement" type="Node2D"]
script = ExtResource( 1 )

[node name="RayCastFloorLeft" type="RayCast2D" parent="."]
position = Vector2( -4, 4 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 11

[node name="RayCastFloorRight" type="RayCast2D" parent="."]
position = Vector2( 12, 4 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 11

[node name="RayCastWallLeft" type="RayCast2D" parent="."]
position = Vector2( 0, 4 )
enabled = true
cast_to = Vector2( -4, 0 )
collision_mask = 67

[node name="RayCastWallRight" type="RayCast2D" parent="."]
position = Vector2( 8, 4 )
enabled = true
cast_to = Vector2( 4, 0 )
collision_mask = 67
